# kybalion

./: .gitignore  Cargo.toml  GENESIS.md  INTEGER-REWORK.md  LICENSE  README.md  RESEARCH.md  SPECIFICATION.md  WHITEPAPER.md
docs/: index.html  prototype.html
paper/: .gitignore  SUBMISSION-ARXIV-CSCY.md  SUBMISSION-PHILARCHIVE.md  hermetic-computing-onward.tex  hermetic-computing.md  hermetic-computing.tex
src/: lib.rs  main.rs  wasm.rs
src/composition/: hermetic_hash.rs  magnum_opus.rs  mod.rs
src/principles/: causality.rs  correspondence.rs  generation.rs  mentalism.rs  mod.rs  polarity.rs  rhythm.rs  vibration.rs
