[package]
name = "hermetic"
version = "0.1.0"
edition = "2021"
description = "Hermetic Computing Framework — The Seven Principles as computational primitives"
license = "MIT"
repository = "https://github.com/asastuai/kybalion"
authors = ["Juan <openclaw>"]
keywords = ["cryptography", "hermetic", "hash", "post-quantum"]
categories = ["cryptography"]

[dependencies]
num-traits = "0.2"
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "serde", "serde_json"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
# Post-quantum crypto integration will come in Phase 2
